--- a/calculo/calculo.html
+++ b/calculo/calculo.html
@@ -12,7 +12,7 @@
         <div>
             <nav class="nav-header">
                 <a href="../index.html">Placa Solar</a>
-                <a href="#post-comp">Arduino</a>
+                <a href="https://arduino-site-seven.vercel.app/">Arduino</a>
             </nav>
         </div>
     </header>
