--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  
                 <a href="#post-solar">Ínicio</a>
                 <a href="calculo/calculo.html">Calcular Consumo</a>
-                <a href="#post-comp">Arduino</a>
+                <a href="https://arduino-site-seven.vercel.app/">Arduino</a>
                 <a href="#solid">SolidWorks</a>
             </nav>
         </div>
