--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div>
             <nav class="nav-header">
  
-                <a href="#post-solar">Ínicio</a>
+                <a href="#post-solar">Início</a>
                 <a href="calculo/calculo.html">Calcular Consumo</a>
                 <a href="https://arduino-site-seven.vercel.app/">Arduino</a>
                 <a href="#solid">SolidWorks</a>
